--- a/slides/teams/weekfive/teamsix/index.qmd
+++ b/slides/teams/weekfive/teamsix/index.qmd
@@ -66,7 +66,14 @@ format:
 ## Some Ways that Helped Us Better Understand It 
 
 ::: {.fragment}
+Focus: Static vs. Dynamic Analysis 
+- **Static Analysis**  
+  - Analyze the *code structure* without running it (just look at).
+  - Example: 'countLine', 'beginWithZ'
 
+- **Dynamic Analysis** 
+  - Imagine *running the program with itself as input*.
+  - Example: 'yesOnString', 'crashOnstring'
 :::
 
 ## Conclusion
