--- a/slides/teams/weekfive/teamsix/index.qmd
+++ b/slides/teams/weekfive/teamsix/index.qmd
@@ -61,34 +61,33 @@ format:
 :::
 
 
-## One-Slide Contradiction Check
+## Python Contradiction Test
 
 ```{pyodide}
 #| autorun: true
-#| max-lines: 12
-def weird_starts_with_z(checker):
-    def F():
-        return 'Z' if not checker(F) else 'N'
-    return F
+#| max-lines: 16
+def weirdStartsWithZ(test_case):
+    def programOutput():  # Contradicts any startsWithZ test cases
+        # Inverts the test_case's answer
+        return 'Not_Z' if test_case(programOutput) else 'Z'
+    return programOutput
 
-def test_case(checker_answer):
-    def checker(_):
-        return checker_answer
-    F = weird_starts_with_z(checker)
-    claimed = checker(F)
-    actual = F().startswith('Z')
-    return claimed, actual
+print("🔍 Testing both possible test_case answers:")
+print("=" * 59)
 
-print("🔍 Testing both possible answers:")
-print("="*49)
-for answer in [True, False]:
-    claimed, actual = test_case(answer)
-    status = "❌ CONTRADICTION" if claimed != actual else "✅ CONSISTENT"
-    print(f"Claims: {claimed:5} | Actual: {actual:5} | {status}")
+for test_answer in [True, False]:
+    def test_case(_):  # Test case that always returns the same answer
+        return test_answer
+    
+    programOutput = weirdStartsWithZ(test_case)  # Apply test_case to itself
+    test_prediction = test_case(programOutput)   # What the test_case predicts
+    actual = programOutput().startswith('Z')     # What actually happens
+    status = "❌ CONTRADICTION" if test_prediction != actual else "✅ CONSISTENT"
+    print(f"Test Case Output: {test_prediction:5} | Reality: {actual:5} | {status}")
 ```
 
 ::: {.fragment .boxed-content}
-**The contradiction is unavoidable** - every possible answer leads to a logical impossibility, proving that `startsWithZ` cannot exist.
+**The contradiction is unavoidable** - every possible prediction leads to a logical impossibility, proving that `startsWithZ` cannot exist.
 :::
 
 ## Why the `startsWithZ` Proof by Contradiction can be Confusing
@@ -103,12 +102,12 @@ for answer in [True, False]:
 ## Some Ways that Helped Us Better Understand It 
 
 ::: {.fragment}
-- Focus: Static vs. Dynamic Analysis 
-- **Static Analysis**  
-  - Analyze the *code structure* without running it (just look at it).
-  - Typicaly computable.
+- Focus: Static vs. Dynamic Analysis
+- **Static Analysis**
+  - Analyze the *code structure* without running it (just look).
+  - Typically computable.
 
-- **Dynamic Analysis** 
+- **Dynamic Analysis**
   - Analyze the *output* of a program.
   - Imagine *running the program with itself as input*.
   - More likely to be uncompuatble.
@@ -118,7 +117,7 @@ for answer in [True, False]:
 
 ::: {.fragment}
 - The `startsWithZ` proof shows how **self-reference leads to contradiction**.
-- Even problems that look simple can be **incomputable** when programs analyze their own behavior.
+- Even problems that look simple can be **uncomputable** when programs analyze their own behavior.
 - By contrasting *static* (structure-based) and *dynamic* (output-based) analysis, we gain insight into why some problems are computable while others are not.
 - Ultimately, `startsWithZ` reminds us of the **limits of computation** and the power of **proof by contradiction**.
 :::
